change form layout(incomplete 70.5%)