@@ -63,6 +63,7 @@ public class Validators {
                 .addListener(
                         (observable, oldValue, newValue) -> {
                             if (newValue) {
+                                errorDisplay.setManaged(false);
                                 errorDisplay.setVisible(false);
                                 textField.pseudoClassStateChanged(INVALID_PSEUDO_CLASS, false);
                             }
@@ -75,7 +76,7 @@ public class Validators {
                                 List<Constraint> constraints = textField.validate();
                                 if (!constraints.isEmpty()) {
                                     textField.pseudoClassStateChanged(INVALID_PSEUDO_CLASS, true);
-                                    errorDisplay.setText(constraints.get(0).getMessage());
+                                    errorDisplay.setText(constraints.getFirst().getMessage());
                                     errorDisplay.setVisible(true);
                                 }
                             }
@@ -86,8 +87,10 @@ public class Validators {
                     validator = textField.getValidator();
                     validate = validator.validate();
                     if (!validate.isEmpty()) {
-                        errorDisplay.setText(validate.get(0).getMessage());
+                        errorDisplay.setManaged(true);
                         errorDisplay.setVisible(true);
+                        textField.pseudoClassStateChanged(INVALID_PSEUDO_CLASS, true);
+                        errorDisplay.setText(validate.getFirst().getMessage());
                     }
                 });
     }
@@ -113,6 +116,7 @@ public class Validators {
                 .addListener(
                         (observable, oldValue, newValue) -> {
                             if (newValue) {
+                                errorDisplay.setManaged(false);
                                 errorDisplay.setVisible(false);
                                 textField.pseudoClassStateChanged(INVALID_PSEUDO_CLASS, false);
                             }
@@ -125,7 +129,7 @@ public class Validators {
                                 List<Constraint> constraints = textField.validate();
                                 if (!constraints.isEmpty()) {
                                     textField.pseudoClassStateChanged(INVALID_PSEUDO_CLASS, true);
-                                    errorDisplay.setText(constraints.get(0).getMessage());
+                                    errorDisplay.setText(constraints.getFirst().getMessage());
                                     errorDisplay.setVisible(true);
                                 }
                             }
@@ -136,8 +140,10 @@ public class Validators {
                     validator = textField.getValidator();
                     validate = validator.validate();
                     if (!validate.isEmpty()) {
-                        errorDisplay.setText(validate.get(0).getMessage());
+                        errorDisplay.setManaged(true);
                         errorDisplay.setVisible(true);
+                        textField.pseudoClassStateChanged(INVALID_PSEUDO_CLASS, true);
+                        errorDisplay.setText(validate.getFirst().getMessage());
                     }
                 });
     }
@@ -159,31 +165,20 @@ public class Validators {
                 .addListener(
                         (observable, oldValue, newValue) -> {
                             if (newValue) {
+                                errorDisplay.setManaged(false);
                                 errorDisplay.setVisible(false);
                                 textField.pseudoClassStateChanged(INVALID_PSEUDO_CLASS, false);
-                            }
-                        });
-        textField
-                .delegateFocusedProperty()
-                .addListener(
-                        (observable, oldValue, newValue) -> {
-                            if (oldValue && !newValue) {
-                                List<Constraint> constraints = textField.validate();
-                                if (!constraints.isEmpty()) {
-                                    textField.pseudoClassStateChanged(INVALID_PSEUDO_CLASS, true);
-                                    errorDisplay.setText(constraints.get(0).getMessage());
-                                    errorDisplay.setVisible(true);
-                                }
                             }
                         });
 
         actionButton.setOnAction(
                 e -> {
-                    validator = textField.getValidator();
-                    validate = validator.validate();
+                    validate = textField.validate();
                     if (!validate.isEmpty()) {
-                        errorDisplay.setText(validate.get(0).getMessage());
+                        errorDisplay.setManaged(true);
                         errorDisplay.setVisible(true);
+                        textField.pseudoClassStateChanged(INVALID_PSEUDO_CLASS, true);
+                        errorDisplay.setText(validate.getFirst().getMessage());
                     }
                 });
     }
